<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home2">

    <fragment
        android:id="@+id/navigation_home2"
        android:name="com.example.waterjarmanagement.seller.navigation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home2" />

    <fragment
        android:id="@+id/navigation_dashboard2"
        android:name="com.example.waterjarmanagement.seller.navigation.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard2" />

    <fragment
        android:id="@+id/navigation_notifications2"
        android:name="com.example.waterjarmanagement.seller.navigation.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications2" />
</navigation>