<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer.PaymentActivity">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="horizontal"
        android:background="@color/cyan_A200"
        android:padding="10dp">

        <TextView
            android:id="@+id/header"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/order_summary"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="32sp"
            android:gravity="center_vertical"
            android:fontFamily="@font/bungee"
            android:textColor="@color/black"
            />

        <ImageView
            android:layout_weight=".5"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:src="@drawable/order"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll"
        android:layout_above="@id/confirmOrder">
        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_type"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="19sp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monthly_order"
                    android:id="@+id/monthlyOrder"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_as_you_go_order"
                    android:checked="true"
                    android:id="@+id/payGoOrder"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seller_details"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="19sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/company_name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/companyName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="Pure Water Jars"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/owner_name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/ownerName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="Megha Dubey"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/price_for_1_jar"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/priceForOneJar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="45"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/contactNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="+91 6262652322"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_details"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="19sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/customerName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="Jaideep Kumar Singh"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delivery_address"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="H236 Nanak Nagar Manegaon Ranjhi Jabalpur Madhya Pradesh 482005"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/jar_quantity"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight=".6"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <Button
                        android:id="@+id/plusButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:text="@string/d"/>

                    <TextView
                        android:id="@+id/jarQuantity"
                        android:layout_width="wrap_content"
                        android:layout_toEndOf="@id/plusButton"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:layout_centerVertical="true"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:padding="5dp"/>

                    <Button
                        android:id="@+id/minusButton"
                        android:layout_toEndOf="@id/jarQuantity"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:text="@string/ds"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/amount_to_pay"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/amountToPay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zero"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <Button
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:id="@+id/confirmOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_order"
        android:padding="10dp"/>


</RelativeLayout>